# nexus

./: .gitignore  README.md  docker-compose.yml
engine/: Cargo.toml
engine/src/: engine.rs  main.rs  matching.rs  orderbook.rs  transport.rs  types.rs
gateway/: drizzle.config.ts  package.json  tsconfig.json
gateway/src/: app.module.ts  config.ts  main.ts  migrate.ts
gateway/src/application/market/commands/: seed-orderbook.handler.ts
gateway/src/application/market/queries/: get-orderbook.handler.ts
gateway/src/application/order/commands/: cancel-order.handler.ts  place-order.handler.ts
gateway/src/application/order/queries/: get-open-orders.handler.ts
gateway/src/domain/market/entities/: balance.entity.ts  trading-pair.entity.ts
gateway/src/domain/order/entities/: order.entity.ts
gateway/src/domain/trade/entities/: trade.entity.ts
gateway/src/infrastructure/database/: drizzle.module.ts  schema.ts
gateway/src/infrastructure/redis/: order.publisher.ts  redis.module.ts  trade.consumer.ts
gateway/src/infrastructure/websocket/: market.gateway.ts
gateway/src/presentation/account/: account.controller.ts
gateway/src/presentation/market/: market.controller.ts
gateway/src/presentation/order/: order.controller.ts
gateway/src/presentation/order/dto/: place-order.dto.ts
gateway/src/presentation/seed/: seed.controller.ts
web/: package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Header.tsx  OpenOrders.tsx  OrderBook.tsx  OrderForm.tsx  TradeHistory.tsx  TradingChart.tsx
web/lib/: api.ts  store.ts
